--- a/src/FormBuilderEditor.css
+++ b/src/FormBuilderEditor.css
@@ -1,16 +1,42 @@
 .field-editor {
-  width: 300px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  padding: 16px;
+  padding: 8px 16px;
   font-family: Arial, sans-serif;
 }
-
-.field-editor__header {
-  display: flex;
-  justify-content: space-between;
+.field-editor-container{
+  -moz-box-align: center;
   align-items: center;
-  margin-bottom: 16px;
+  display: flex;
+  position: sticky;
+  z-index: 5;
+  top: 0px;
+  height: 43px;
+  margin: -12px -16px 12px;
+}
+.field-editor__header {
+  -moz-box-align: center;
+  align-items: center;
+  display: flex;
+  -moz-box-flex: 1;
+  flex-grow: 1;
+  -moz-box-pack: justify;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding: 0px 12px;
+  box-sizing: border-box;
+  overflow: visible;
+  border-bottom: 1px solid rgb(211, 221, 225);
+  color: rgb(21, 35, 43);
+  background-color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 500;
+  white-space: nowrap;
+}
+.field-editor-remove-field{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
 }
 
 .field-editor__actions {
@@ -31,7 +57,6 @@
 }
 
 .field-editor__section {
-  margin-bottom: 16px;
 }
 
 .field-editor__section-title {
@@ -98,4 +123,59 @@
   font-size: 14px;
   color: #333;
   margin-left: 4px;
+}
+
+.field-editor-checkbox-options{
+
+}
+.option-group {
+  margin-bottom: 10px;
+}
+
+.option-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.option-input {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.option-input input {
+  flex: 1;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.option-buttons {
+  display: flex;
+  margin-left: 5px;
+}
+
+.field-editor-add-button,
+.field-editor-remove-button {
+  padding: 5px 10px;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.field-editor-remove-button {
+  background-color: #dc3545;
+  margin-left: 5px;
+}
+.field-editor-checkbox-options {
+  margin-top: 10px;
+}
+
+.field-editor-checkbox-options label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
 }
