--- a/src/index.css
+++ b/src/index.css
@@ -208,6 +208,18 @@ body {
 .form-actions .fill {
   background-color: #2196F3;
 }
+.form-actions .delete {
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #dc3545;
+  color: #fff;
+  cursor: pointer;
+}
+.form-actions .delete:hover {
+  opacity: 0.7;
+}
 
 .form-actions a:hover {
   opacity: 0.8;
@@ -300,6 +312,7 @@ body {
   transition-property: color, background-color;
   transition-timing-function: ease-in-out;
   padding: 12px 12px;
+  text-decoration: none;
   color: rgb(255, 255, 255);
   background-color: rgb(1, 151, 236);
   cursor: pointer;
@@ -353,7 +366,7 @@ body {
   gap: 19px;
   text-align: center;
   padding: 51px;
-  margin-top: 12px;
+  margin: 12px 16px;
   border: 1px dashed rgb(211, 221, 225);
   border-radius: 8px;
   background-color: rgb(247, 248, 248);
@@ -464,7 +477,7 @@ body {
   flex-direction: column;
   flex: 0 1 auto;
   margin: 0px calc(18.5px);
-  padding: 8px 13px 13px;
+  padding: 14px 13px;
   border: 2px solid rgb(211, 221, 225);
   border-radius: 4px;
   cursor: move;
@@ -496,6 +509,67 @@ body {
   background-color: rgb(255, 255, 255);
   color: rgb(69, 85, 96);
 }
+.form-component-form-date-time-inputs,
+.form-component-form-date-inputs,
+.form-component-form-time-inputs{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.form-component-form-date-time-inputs img{
+  width: 26px;
+  height: 26px;
+}
+.form-component-date-time-input-div{
+  display: flex;
+  justify-content: end;
+  -moz-box-align: center;
+  align-items: center;
+  width: 100px;
+  padding: 7px 4px;
+  box-sizing: border-box;
+  border: 1px solid rgb(211, 221, 225);
+  border-radius: 4px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(69, 85, 96);
+}
+.form-component-date-time-input-div img{
+  width: 20px;
+  height: 20px;
+}
+.form-component-file-upload{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  padding: 10px 8px;
+  box-sizing: border-box;
+  border: 3px solid rgb(211, 221, 225);
+  border-radius: 14px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(69, 85, 96);
+  margin-left: 8px;
+}
+.form-component-file-upload img{
+  width: 24px;
+}
+.form-component-dropdown-div{
+  -moz-box-align: center;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  width: 100%;
+  padding: 7px 12px;
+  box-sizing: border-box;
+  border: 1px solid rgb(211, 221, 225);
+  border-radius: 4px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(69, 85, 96);
+}
+.form-component-dropdown-div img{
+  width: 20px;
+  height: 20px;
+}
 .form-component-name-fields{
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -516,6 +590,71 @@ body {
   position: relative;
   box-sizing: border-box;
   background-color: rgb(255, 255, 255);
+}
+.form-date-time-answer{
+  position: relative;
+  box-sizing: border-box;
+  background-color: rgb(255, 255, 255);
+}
+.form-date-time-answer img{
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  right: 12px;
+  top: 10px;
+}
+.form-checkbox-answers-vertical{
+  position: relative;
+  box-sizing: border-box;
+  background-color: rgb(255, 255, 255);
+}
+.form-checkbox-answers-horizontal{
+  display: flex;
+  gap: 16px;
+  position: relative;
+  box-sizing: border-box;
+  background-color: rgb(255, 255, 255);
+}
+.form-checkbox-option{
+  display: flex;
+  -moz-box-align: center;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.form-checkbox-option-radio{
+  width: 15px;
+  height: 15px;
+  box-sizing: border-box;
+  border: 1px solid rgb(211, 221, 225);
+  border-radius: 12px;
+}
+.form-checkbox-option-radio-checked{
+  width: 15px;
+  height: 15px;
+  box-sizing: border-box;
+  border-radius: 12px;
+  border: 1px solid rgb(6, 158, 180);
+  background-color: rgb(6, 158, 180);
+}
+.form-checkbox-option-checker{
+  width: 15px;
+  height: 15px;
+  box-sizing: border-box;
+  border: 1px solid rgb(211, 221, 225);
+  border-radius: 4px;
+}
+.form-checkbox-option-checker-checked{
+  width: 15px;
+  height: 15px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid rgb(6, 158, 180);
+  background-color: rgb(6, 158, 180);
+}
+.form-checkbox-option-title{
+  margin-left: 7px;
+  color: rgb(69, 85, 96);
+  font-size: 12px;
 }
 
 
