--- a/src/Login.css
+++ b/src/Login.css
@@ -8,15 +8,24 @@
 
 .login-form {
   width: 400px;
-  padding: 40px;
+  padding: 24px 24px 40px;
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.login-logo-container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 24px;
+}
+.login-logo-container img{
+  width: 200px;
+}
+
 .login-title {
-  margin-bottom: 20px;
-  font-size: 24px;
+  margin-bottom: 16px;
+  font-size: 20px;
   text-align: center;
   color: #333;
 }
