--- a/src/UserPagesStyle.css
+++ b/src/UserPagesStyle.css
@@ -31,16 +31,27 @@
 }
 .user-title-container{
   height: 100%;
-  display: block;
+  display: flex;
   text-align: left;
   width: 100%;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 18px 24px 16px;
+  padding: 14px 12px 16px;
+  justify-content: center;
+  position: relative;
+}
+.user-properties-goback-icon{
+  display: flex;
+  padding: 4px;
+  cursor: pointer;
+  position: absolute;
+  left: 8px;
+  top: 12px;
+}
+.user-properties-goback-icon img{
+  rotate: 180deg;
+  width: 20px;
 }
 .user-title{
-  padding-bottom: 8px;
-  padding-top: 8px;
   display: block;
   background: none;
   border: none;
@@ -110,6 +121,10 @@
   margin: 0;
   padding: 0;
   width: 24px;
+}
+.user-property-icon img{
+  height: 20px;
+  width: 20px;
 }
 .user-property-title{
   -moz-box-flex: 1;
