--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,8 @@ body {
 
 /* Header styles */
 .header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
+  background-color: #fffbf3;
+  padding: 20px 60px;
 }
 .header-container{
   padding: 0px 120px;
@@ -45,6 +44,9 @@ body {
   color: #fff;
   text-decoration: none;
 }
+.logo img {
+  width: 120px;
+}
 
 .nav-links {
   display: flex;
@@ -52,17 +54,31 @@ body {
 }
 
 .nav-links li {
-  margin-left: 20px;
+  padding: 12px 20px;
 }
 
 .nav-links a {
-  color: #fff;
+  color: #252424;
   text-decoration: none;
   transition: color 0.3s ease;
+  font-size: 18px;
 }
 
 .nav-links a:hover {
-  color: #ccc;
+  color: #a9a9a9;
+}
+
+.header-button a{
+  text-decoration: none;
+  transition: color 0.3s ease;
+  background-color: #0c414a;
+  color: #f0fb86;
+  padding: .625rem 1.25rem;
+  border-radius: 8px;
+  font-size: 18px;
+}
+.header-button a:hover {
+  color: #f3fab2;
 }
 
 body {
@@ -140,11 +156,23 @@ body {
   text-align: center;
 }
 
+.page{
+  height: 100vh;
+  background: #fff;
+}
+
+.dashboard-body{
+  background: #FFF;
+  border-radius: 18px;
+  margin: 40px 180px;
+  border: 1px solid #d8d8d8;
+}
+
 .dashboard-page-heading{
   display: flex;
   -moz-box-pack: justify;
   justify-content: space-between;
-  margin: 31px 31px 0px;
+  margin: 22px 42px 0px;
 }
 .dashboard-page-title{
   font-size: 24px;
@@ -227,22 +255,13 @@ body {
 
 /* New Form Button */
 .new-form-btn {
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: #fff;
-  text-decoration: none;
-  text-align: center;
-  -moz-box-align: center;
-  align-items: center;
-  display: inline-flex;
-  border-radius: 4px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1;
-  user-select: none;
-  transition-duration: 200ms;
-  transition-property: color, background-color;
-  transition-timing-function: ease-in-out;
+  transition: opacity 0.3s ease;
+  color: #0c414a;
+  background-color: #f8ffb9;
+  padding: 4px 8px;
+  border-radius: 8px;
+  font-size: 16px;
+  border: 1px solid #d8d8d8;
   cursor: pointer;
 }
 
@@ -710,4 +729,97 @@ body {
 }
 .drop-bottom{
   margin-top: 5px;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 22px;
+  max-width: 500px;
+  width: 100%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-height: 94vh;
+  overflow-y: auto;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.modal-header h2 {
+  font-size: 22px;
+  font-weight: bold;
+  color: #333333;
+}
+
+.modal-close {
+  background: none;
+  border: none;
+  font-size: 20px;
+  color: #999999;
+  cursor: pointer;
+}
+
+.modal-body {
+  margin-bottom: 24px;
+}
+
+.form-group {
+  margin-bottom: 8px;
+}
+
+.form-group label {
+  display: block;
+  font-size: 15px;
+  color: #333333;
+  margin-bottom: 4px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 8px 4px;
+  font-size: 15px;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  resize: none;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal-footer button {
+  padding: 10px 16px;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modal-footer button[type='submit'] {
+  background-color: #007bff;
+  color: #ffffff;
+  margin-right: 8px;
+}
+
+.modal-footer button[type='button'] {
+  background-color: #f0f0f0;
+  color: #333333;
 }
