--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,7 @@ body {
   justify-content: space-between;
   display: flex;
   padding: 12px;
+  border-top: 1px solid rgb(211, 221, 225);
   border-bottom: 1px solid rgb(211, 221, 225);
   background-color: rgb(255, 255, 255);
 }
@@ -798,7 +799,28 @@ body {
   border-radius: 4px;
   resize: none;
 }
+.form-select {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23333'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 16px;
+  padding-right: 32px;
+}
 
+.form-select:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
 .modal-footer {
   display: flex;
   justify-content: flex-end;
