--- a/src/Spinner.css
+++ b/src/Spinner.css
@@ -4,9 +4,7 @@
   justify-content: center;
   align-items: center;
   transition: all 4s ease-out;
-  top: 30%;
-  position: absolute;
-  left: 45%;
+  margin: 40px auto;
 }
 @keyframes spin {
   0% { transform: rotate(360deg); }
