--- a/src/AdminPageStyles.css
+++ b/src/AdminPageStyles.css
@@ -51,7 +51,8 @@
   cursor: pointer;
 }
 .admin-page-create-button:hover{
-  opacity: 0.8;
+  opacity: 0.7;
+  border: 1px solid #a9a9a9;
 }
 .admin-page-body-content{
 
@@ -155,5 +156,6 @@
   cursor: pointer;
 }
 .send-user-invite-button:hover{
-  opacity: 0.8;
+  opacity: 0.7;
+  border: 1px solid #a9a9a9;
 }
