--- a/src/FormLiveStyles.css
+++ b/src/FormLiveStyles.css
@@ -3,7 +3,6 @@
   flex-grow: 1;
   overflow-y: auto;
   width: 100%;
-  padding: calc(20px);
 }
 .form-live-content{
   display: block;
@@ -11,7 +10,7 @@
   border: 0px solid transparent;
   border-radius: 0px;
   box-sizing: border-box;
-  margin: calc(20px) auto;
+  margin: calc(40px) auto;
   padding: calc(20px);
   max-width: 700px;
   width: 100%;
@@ -234,4 +233,18 @@
 
 .form-file-label:hover {
   background-color: #e0e0e0;
+}
+
+.form-live-submitted-block {
+  background-color: #d4edda;
+  border: 1px solid #c3e6cb;
+  border-radius: 4px;
+  color: #155724;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 200px auto;
+  padding: 20px 15px;
+  text-align: center;
+  animation: fadeOut 3s ease-in-out forwards;
+  width: 480px;
 }
