--- a/src/index.css
+++ b/src/index.css
@@ -45,11 +45,13 @@ body {
   position: fixed;
   top: 0;
   width: 100vw;
+  height: 105px;
   background-color: #fffbf3;
   padding: 20px 60px;
 }
 .header-container{
   padding: 0px 120px;
+  height: 65px;
 }
 
 .header-nav {
@@ -71,21 +73,26 @@ body {
 .nav-links {
   display: flex;
   list-style: none;
+  margin: 20px 0px;
 }
 
 .nav-links li {
-  padding: 12px 20px;
+  /* padding: 12px 20px; */
 }
 
 .nav-links a {
-  color: #252424;
+  color: #1c5055;
   text-decoration: none;
   transition: color 0.3s ease;
   font-size: 18px;
+  padding: 12px 20px;
+  border-bottom: 3px solid #dfdfdf;
 }
 .nav-links li a.active,
 .header-button li a.active {
   font-weight: bold;
+  color: #eaa69d;
+  border-bottom: 3px solid #eaa69d;
 }
 
 .nav-links a:hover {
@@ -216,9 +223,9 @@ body {
 .table-page-content{
   display: flex;
   justify-content: center;
-  padding: 0px 20px;
+  padding: 0px 12px;
   background-color: #ffffff;
-  border-radius: 12px;
+  border-radius: 6px;
 }
 .dashboard-page-content{
   display: flex;
