--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ body {
   margin: 40px 60px;
   width: 100%;
 }
+.editor-page-body{
+  background: #FFF;
+  border-radius: 18px;
+  border: 1px solid #d8d8d8;
+  width: 100%;
+}
 
 /* Header styles */
 .header-component {
@@ -48,6 +54,7 @@ body {
   height: 105px;
   background-color: #fffbf3;
   padding: 20px 60px;
+  z-index: 100;
 }
 .header-container{
   padding: 0px 120px;
@@ -434,11 +441,11 @@ body {
   flex-direction: column;
   display: flex;
   width: 349px;
-  height: calc(-53px + 100vh);
+  height: calc(-105px + 100vh);
   box-sizing: border-box;
   overflow-y: auto;
   position: sticky;
-  top: 53px;
+  top: 105px;
   border-right: 1px solid #c4c4c4;
   background: #f5f5f5;
 }
