--- a/src/FormLiveStyles.css
+++ b/src/FormLiveStyles.css
@@ -4,17 +4,26 @@
   overflow-y: auto;
   width: 100%;
 }
-.form-live-content{
+.form-live-container{
   display: block;
   background-color: rgb(255, 255, 255);
   border: 0px solid transparent;
   border-radius: 0px;
   box-sizing: border-box;
   margin: calc(40px) auto;
-  padding: calc(20px);
   max-width: 700px;
   width: 100%;
   float: none;
+}
+.form-live-title{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  font-size: 22px;
+}
+
+.form-live-content{
+  padding: calc(20px);
 }
 .form-live-component-container{
   direction: ltr;
@@ -128,9 +137,13 @@
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
-.form-component-select option {
+.form-component-select-option {
   background-color: #fff;
   color: #333;
+}
+.form-component-select-option:hover {
+  background: inherit;
+  opacity: 0.7;
 }
 
 .form-component-checkbox-container,
