--- a/src/clients_page_components/ClientAddingWindow.css
+++ b/src/clients_page_components/ClientAddingWindow.css
@@ -56,19 +56,35 @@
 }
 
 button {
-  padding: 8px 15px;
+  padding: 8px 12px;
   margin-left: 10px;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   cursor: pointer;
 }
 
-button[type="submit"] {
-  background-color: #4CAF50;
-  color: white;
+.modal-button[type="submit"] {
+  border: 1px solid #4CAF50;
+  color: #fffefe;
+  background: #a4dca6;
+}
+.modal-button[type="submit"]:hover {
+  color: #4CAF50;
 }
 
-button[type="button"] {
-  background-color: #f44336;
-  color: white;
+button[type="cancel"] {
+  border: 1px solid #f44336;
+  color: #fffefe;
+  background: #e6a8a4;
+}
+button[type="cancel"]:hover {
+  color: #f44336;
+}
+button[type="usual"]{
+  border: 1px solid #0c414a;
+  color: #fffefe;
+  background: #b4b4b4;
+}
+button[type="usual"]:hover{
+  color: #0c414a;
 }
