--- a/src/FormLiveStyles.css
+++ b/src/FormLiveStyles.css
@@ -3,6 +3,7 @@
   flex-grow: 1;
   overflow-y: auto;
   width: 100%;
+  height: 100vh;
 }
 .form-live-container{
   display: block;
@@ -35,7 +36,7 @@
   display: flex;
   flex-direction: column;
   grid-column: span 1;
-  margin-bottom: calc(20px);
+  margin-bottom: calc(12px);
 }
 .form-live-date-time-container{
   display: grid;
@@ -259,5 +260,5 @@
   padding: 20px 15px;
   text-align: center;
   animation: fadeOut 3s ease-in-out forwards;
-  width: 480px;
+  width: 514px;
 }
