--- a/src/Login.css
+++ b/src/Login.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #fffbf3;
 }
 
 .login-form {
@@ -11,7 +11,7 @@
   padding: 24px 24px 40px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .login-logo-container{
@@ -27,7 +27,7 @@
   margin-bottom: 16px;
   font-size: 20px;
   text-align: center;
-  color: #333;
+  color: #1c5055;
 }
 
 .login-error {
@@ -42,7 +42,7 @@
 
 .form-label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 4px;
   font-size: 16px;
   color: #333;
 }
@@ -52,5 +52,5 @@
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 6px;
 }
