--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,6 @@ body {
   color: #333;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .home-page-container{
   display: grid;
   gap: 10px;
@@ -57,7 +51,6 @@ body {
   z-index: 100;
 }
 .header-container{
-  padding: 0px 120px;
   height: 65px;
 }
 
@@ -94,6 +87,7 @@ body {
   font-size: 18px;
   padding: 12px 20px;
   border-bottom: 3px solid #dfdfdf;
+  white-space: nowrap;
 }
 .nav-links li a.active,
 .header-button li a.active {
@@ -145,14 +139,14 @@ body {
   flex-direction: column;
   align-items: center;
   max-width: 960px;
-  margin: 40px auto;
-  padding: 20px;
+  margin: 24px auto;
+  padding: 18px;
 }
 
 .main-heading {
   font-size: 36px;
   font-weight: bold;
-  color: #333;
+  color: #1c5055;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -160,7 +154,7 @@ body {
 .hero-text {
   font-size: 18px;
   color: #666;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
 }
 
 .cta-btn {
@@ -181,28 +175,28 @@ body {
 
 .about-section {
   background-color: #fff;
-  padding: 0px 20px;
+  padding: 0px 18px;
   max-width: 960px;
   margin: 20px auto;
-  border-radius: 12px;
+  border-radius: 10px;
 }
 
 .section-heading {
   font-size: 24px;
   font-weight: bold;
-  color: #333;
-  margin-bottom: 20px;
+  color: #1c5055;
+  margin-bottom: 12px;
   text-align: center;
 }
 
 .about-text {
   font-size: 16px;
   color: #666;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
 }
 
 .footer {
-  background-color: #333;
+  background-color: #1c5055;
   color: #fff;
   padding: 20px 0;
   text-align: center;
@@ -730,6 +724,16 @@ body {
   width: 20px;
   height: 20px;
 }
+.form-component-double-section-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+.form-component-triple-section-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
 .form-component-name-fields{
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -1034,6 +1038,7 @@ body {
 .login-button {
   width: 100%;
   padding: 10px;
+  margin: 0px;
   font-size: 16px;
   color: #fff;
   text-decoration: none;
@@ -1056,6 +1061,7 @@ body {
   height: 36px;
   margin: 0;
   background: #b4b4b4;
+  cursor: pointer;
 }
 .go-back-button:hover{
   color: #0c414a;
